tests/compile-fail/Rule_10_1.rs
#[allow(unused_variables)]

fn main() {
    let x: i32 = 0xFF;
    let y = x << 2;
    //~^ ERROR Non-compliant - inappropriate essential type
}
